=======
CHANGES
=======

4.2.0 (unreleased)
------------------

- 100% unit test coverage.

- Doctests moved from the package and wired up as normal Sphinx documentation.

- Added explicit support for PyPy.

- Added support for continuous integration using ``tox`` and ``jenkins``.

- Dropped the external ``six`` dependency in favor of a much-trimmed
  ``zope.schema._compat`` module.

- Tests now pass when run under ``nose``.

- Added ``setup.py dev`` alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Added ``setup.py docs`` alias (installs ``Sphinx`` and dependencies).


4.1.1 (2012-03-23)
------------------

- Remove trailing slash in MANIFEST.in, it causes Winbot to crash.


4.1.0 (2012-03-23)
------------------

- Add TreeVocabulary for nested tree-like vocabularies.

- Fix broken Object field validation where the schema contains a Choice with
  ICountextSourceBinder source. In this case the vocabulary was not iterable
  because the field was not bound and the source binder didn't return the 
  real vocabulary. Added simple test for IContextSourceBinder validation. But a
  test with an Object field with a schema using a Choice with
  IContextSourceBinder is still missing.

4.0.1 (2011-11-14)
------------------

- Fix bug in ``fromUnicode`` method of ``DottedName`` which would fail
  validation on being given unicode. Introduced in 4.0.0.

4.0.0 (2011-11-09)
------------------

- Fix deprecated unittest methods.

- Port to Python 3. This adds a dependency on six and removes support for
  Python 2.5.

3.8.1 (2011-09-23)
------------------

- fix broken Object field validation. Previous version was using a volatile
  property on object field values which ends in a ForbiddenAttribute error
  on security proxied objects. 

3.8.0 (2011-03-18)
------------------

- Implemented a ``defaultFactory`` attribute for all fields. It is a callable
  that can be used to compute default values. The simplest case is::
