@@ -1785,9 +1785,9 @@ class URITests(unittest.TestCase):
 
     def test_validate_wrong_types(self):
         from zope.schema.interfaces import WrongType
-        from zope.schema._compat import u
+        from zope.schema._compat import non_native_string
         field = self._makeOne()
-        self.assertRaises(WrongType, field.validate, u(''))
+        self.assertRaises(WrongType, field.validate, non_native_string(''))
         self.assertRaises(WrongType, field.validate, 1)
         self.assertRaises(WrongType, field.validate, 1.0)
         self.assertRaises(WrongType, field.validate, ())
@@ -1798,35 +1798,31 @@ class URITests(unittest.TestCase):
         self.assertRaises(WrongType, field.validate, object())
 
     def test_validate_not_required(self):
-        from zope.schema._compat import b
         field = self._makeOne(required=False)
-        field.validate(b('http://example.com/'))
+        field.validate('http://example.com/')
         field.validate(None)
 
     def test_validate_required(self):
         from zope.schema.interfaces import RequiredMissing
-        from zope.schema._compat import b
         field = self._makeOne()
-        field.validate(b('http://example.com/'))
+        field.validate('http://example.com/')
         self.assertRaises(RequiredMissing, field.validate, None)
 
     def test_validate_not_a_uri(self):
         from zope.schema.interfaces import ConstraintNotSatisfied
         from zope.schema.interfaces import InvalidURI
-        from zope.schema._compat import b
         field = self._makeOne()
-        self.assertRaises(InvalidURI, field.validate, b(''))
-        self.assertRaises(InvalidURI, field.validate, b('abc'))
-        self.assertRaises(InvalidURI, field.validate, b('\xab\xde'))
+        self.assertRaises(InvalidURI, field.validate, '')
+        self.assertRaises(InvalidURI, field.validate, 'abc')
+        self.assertRaises(InvalidURI, field.validate, '\xab\xde')
         self.assertRaises(ConstraintNotSatisfied,
-                          field.validate, b('http://example.com/\nDAV:'))
+                          field.validate, 'http://example.com/\nDAV:')
 
     def test_fromUnicode_ok(self):
-        from zope.schema._compat import b
         from zope.schema._compat import u
         field = self._makeOne()
         self.assertEqual(field.fromUnicode(u('http://example.com/')),
-                         b('http://example.com/'))
+                         'http://example.com/')
 
     def test_fromUnicode_invalid(self):
         from zope.schema.interfaces import ConstraintNotSatisfied
